# openclto

./: CMakeLists.txt  License.txt  README.txt  TO-profocusInput-v-08.xml  TO-profocusInput-v-09.xml  TO-profocusInput-v-10-fileinput.xml  TO-profocusInput-v-10.xml  TO-profocusInput-v-16-sarus_file.xml
Plugin_A/: CMakeLists.txt  plugin_main.cpp
Plugin_B/: CMakeLists.txt  Parameters.h  plugin_scale.cpp  scale.cl
PyUspPlugin/: demo_plugin_memdbg.py  demo_plugin_use.py  pyuspplugin.py
TheApplication/: CMakeLists.txt  app_main.cpp  common_cl_srv.h
UspPlugin/: UspDebug.cpp  UspDebug.h  UspPlugin.h  UspPluginModule.cpp  UspPluginModule.h  UspPlugin_bradway.h  variables.txt
cmake/: FindOpenCL.cmake
